--- a/00-K1-CS1B-FIA-APRIL-2022/K1_Question_1.html
+++ b/00-K1-CS1B-FIA-APRIL-2022/K1_Question_1.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.21/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -11,8 +11,12 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # Statistics with R
+]
+.subtitle[
 ## Introduction to R for Actuarial Students
+]
 
 ---
 
@@ -38,54 +42,88 @@ pre {
 
 ---
 
-1 An engineer is considering the maximum number of people who can occupy a lift. In 
-particular, the engineer wants to assess the probability of exceeding a maximum 
+### Exercise 
+
+An engineer is considering the maximum number of people who can occupy a lift. 
+
+In particular, the engineer wants to assess the probability of exceeding a maximum 
 weight when eight people are allowed to use the lift at the same time, compared to 
 nine people. 
+
 Assume that: 
- the total weight of eight people chosen at random follows a normal distribution 
+* the total weight of eight people chosen at random follows a normal distribution 
 with a mean of 560 kg and standard deviation of 57 kg 
- the total weight of nine people chosen at random follows a normal distribution 
+
+* the total weight of nine people chosen at random follows a normal distribution 
 with a mean of 630 kg and standard deviation of 61 kg.
 
 ---
 
 ### Exercises
 
-(i) Calculate the probability that the total weight of eight people exceeds 650 kg.
+A. Calculate the probability that the total weight of eight people exceeds 650 kg.
   
-(ii) Calculate the probability that the total weight of nine people exceeds 650 kg.
+B. Calculate the probability that the total weight of nine people exceeds 650 kg.
   
-(iii) Comment on your answers to parts (i) and (ii).  
-(iv) Calculate the interval for the central region containing 80% of the distribution 
+C. Comment on your answers to parts (A) and (B).  
+
+D.  Calculate the interval for the central region containing 80% of the distribution 
 of the total weight of eight people.
+
+---
+
+### Exercises
+
 Assume now that the total weight of eight people chosen at random follows a gamma 
-distribution with parameters α = 96.5220 and λ = 0.1724. 
-(v) (a) Calculate the interval for the central region containing 80% of the 
+distribution with parameters `\(\alpha = 96.5220\)` and `\(\lambda = 0.1724\)`. 
+
+E. Calculate the interval for the central region containing 80% of the 
 distribution of the total weight of eight people in this case. 
-(b) Comment on your answers to parts (iv) and (v)(a). 
+
+F. Comment on your answers to parts (D) and (E). 
 
 
 ---
 
-Solutions for Subject CS1B – April 2022
-Q1
-(i) 
-Let X be the total weight of 8 people. By the assumption: 𝑋𝑋 ~ 𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁(560 , 572). We are 
+### Part A
+
+Let `\(X\)` be the total weight of 8 people. 
+
+By the assumption: `\(X \sim N(560 , 57^2)\)`. We are 
 interested in the probability P(X &gt; 650):
-1 - pnorm(650,560,57) 
-# 0.05717406
-The probability that the total weight of 8 people exceeds 650kg is equal to 0.05717406. 
----
 
-(ii)
-Let Y be the total weight of 9 people. By the assumption: 𝑌𝑌 ~ 𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁(630 , 612). 
-
-We are 
-interested in the probability P(Y &gt; 650):
 
 ```r
-1 - pnorm(650,630,61) 
+1 - pnorm(650,mean=560,sd=57) 
+```
+
+```
+## [1] 0.05717406
+```
+
+The probability that the total weight of 8 people exceeds 650kg is equal to 0.05717406. 
+
+---
+
+### Part B
+
+Let `\(Y\)` be the total weight of 9 people. By the assumption: `\(Y \sim N(630 , 61^2)\)`. 
+
+We are interested in the probability `\(P(Y &gt; 650)\)`:
+
+
+
+```r
+pnorm(650,mean=630,sd=61, lower=FALSE) 
+```
+
+```
+## [1] 0.3715054
+```
+
+
+```r
+1 - pnorm(650,mean=630,sd=61) 
 ```
 
 ```
@@ -97,52 +135,128 @@ We get that the probability that the total weight of 9 people exceeds 650kg is m
 and is equal to 0.3715054. 
 
 ---
-(iii)
-Parts (i) &amp; (ii) show that as more people enter the lift, the probability of exceeding 
+
+#### Exercise C
+
+* Parts (A) &amp; (B) show that as more people enter the lift, the probability of exceeding 
 650kg increases. 
-While the probability of exceeding 650kg is small with 8 people, 
+* While the probability of exceeding 650kg is small with 8 people, 
 exceeding the maximum weight is considerably more likely with 9 people. 
 ---
-(iv)
-Again, 𝑋𝑋 ~ 𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁𝑁(560, 572), where X is the total weight of 8 people. 
-In order to find the central region that contains 80% of the distribution we need to identify the 
+
+#### Exercise D
+
+* Again, `\(X \sim N(560, 57^2)\)`, where `\(X\)` is the total weight of 8 people. 
+
+* In order to find the central region that contains 80% of the distribution we need to identify the 
 10%-percentile and the 90%-percentile of X.
-We use the function “qnorm" in the code:
 
-&lt;pre&gt;&lt;code&gt;
-&gt; qnorm(0.1,560,57) 
-# 486.9516
-&gt; qnorm(0.9,560,57) 
-# 633.0484
+* We use the function “&lt;tt&gt;qnorm()&lt;/tt&gt;" in the code:
 
-&lt;/code&gt;&lt;/pre&gt;
+
+```r
+qnorm(p=0.1,mean=560,sd=57) 
+```
+
+```
+## [1] 486.9516
+```
+
+
+```r
+qnorm(0.9,560,57) 
+```
+
+```
+## [1] 633.0484
+```
+
 
 The requested interval is [486.9516, 633.0484]. 
 ---
 
-(v)(a) 
-We now have 𝑌𝑌 ~ 𝐺𝐺𝐺𝐺𝐺𝐺𝐺𝐺𝐺𝐺(96.5220, 0.1724), where Y is the total weight of 8 people. The 
-computation this time produces:
-qgamma(0.1, 96.5220, 0.1724) 
-# 488.195
-&gt; qgamma(0.9, 96.5220, 0.1724) 
-# 634.0333
+#### Gamma Distribution
+
+* Shape parameter `\(\alpha\)` - R argument is &lt;tt&gt;shape=&lt;/tt&gt;.
+
+* Rate parameter `\(\lambda\)` - R argument is &lt;tt&gt;rate=&lt;/tt&gt;.
+
+* Scale parameter is the inverse of the rate parameter - R argument is &lt;tt&gt;scale=&lt;/tt&gt;.
+
+---
+
+#### Exercise E
+
+
+
+We now have `\(Y \sim G(96.5220, 0.1724)\)`, where `\(Y\)` is the total weight of 8 people. 
+
+The calculation this time produces:
+
+
+```r
+qgamma(p = 0.1, shape= 96.5220, rate = 0.1724) 
+```
+
+```
+## [1] 488.195
+```
+488.195
+
+
+```r
+qgamma(p = 0.9, shape = 96.5220, rate = 0.1724) 
+```
+
+```
+## [1] 634.0333
+```
+
 and the interval is [488.195, 634.0333]. 
-(b)
-The intervals are very similar. 
-The mean and standard deviation of the two distributions are (approximately) equal. 
-As the first (shape) parameter of the gamma distribution is large, the distribution is close 
+
+---
+
+Using Scale parameter
+
+
+```r
+qgamma(p = 0.1, shape= 96.5220, scale = (1/0.1724)) 
+```
+
+```
+## [1] 488.195
+```
+488.195
+
+
+```r
+qgamma(p = 0.9, shape = 96.5220, scale = (1/0.1724)) 
+```
+
+```
+## [1] 634.0333
+```
+
+---
+
+#### Exercise F
+
+* The intervals are very similar. 
+* The mean and standard deviation of the two distributions are (approximately) equal. 
+* As the first (shape) parameter of the gamma distribution is large, the distribution is close 
 to a normal distribution. 
----
-
-END
-
 
 ---
 
 END
 
+
 ---
+
+END
+
+---
+
 Candidates overall answered well this question. 
 In parts (i) and (ii) a common error was calculating the probability at the wrong tail, e.g. 
 using pnorm() instead of 1-pnorm().
@@ -195,6 +309,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
